--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -91,6 +91,10 @@
 			Margin="20,30,20,20" 
 			Text="Ticket Details"                   
 			Style="{StaticResource PageHeaderTextStyle}" />
+        <TextBlock Grid.Column="3"
+			Margin="55,30,20,20" 
+			Text="Attachments"                   
+			Style="{StaticResource PageHeaderTextStyle}" />        
         <Grid Grid.Row="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
@@ -325,6 +329,22 @@
                     </GridView>
                 </ScrollViewer>
             </Grid>
+        </Grid>
+        <Grid Grid.Column="3" Grid.Row="1" Margin="50,0,50,0" Width="auto">
+            <ScrollViewer ScrollViewer.VerticalScrollMode="Auto" VerticalAlignment="Top" Height="600" Margin="0,20,0,0" ScrollViewer.VerticalScrollBarVisibility="Auto">
+                <GridView x:Name="AttachmentsList" Margin="0,0,30,0" HorizontalAlignment="Stretch" IsTapEnabled="False" SelectionMode="None">
+                    <GridView.ItemsPanel>
+                        <ItemsPanelTemplate>
+                            <StackPanel Orientation="Vertical" HorizontalAlignment="Stretch" />
+                        </ItemsPanelTemplate>
+                    </GridView.ItemsPanel>
+                    <GridView.ItemTemplate>
+                        <DataTemplate>
+                            <Image Source="{Binding ImageUrl}" Width="400" Stretch="UniformToFill" />
+                        </DataTemplate>
+                    </GridView.ItemTemplate>
+                </GridView>
+            </ScrollViewer>
         </Grid>
     </Grid>
 </common:LayoutAwarePage>
