--- a/SherpaDesk/TicketDetails.xaml
+++ b/SherpaDesk/TicketDetails.xaml
@@ -92,7 +92,8 @@
 			Text="Ticket Details"                   
 			Style="{StaticResource PageHeaderTextStyle}" />
         <TextBlock Grid.Column="3"
-			Margin="55,30,20,20" 
+			Margin="55,30,20,20"
+                   x:Name="AttachmentsTitle"
 			Text="Attachments"                   
 			Style="{StaticResource PageHeaderTextStyle}" />        
         <Grid Grid.Row="1">
@@ -128,7 +129,7 @@
                     </StackPanel>
                 </telerikPrimitives:RadCustomHubTile.FrontContent>
             </telerikPrimitives:RadCustomHubTile>
-            <telerikPrimitives:RadCustomHubTile x:Name="TransferButton" Grid.Row="3" HorizontalAlignment="Center" Margin="0,0,0,20" Height="100" VerticalAlignment="Top" Width="200" Background="#96c8dd">
+            <telerikPrimitives:RadCustomHubTile x:Name="TransferButton" Tapped="TransferButton_Tapped" Grid.Row="3" HorizontalAlignment="Center" Margin="0,0,0,20" Height="100" VerticalAlignment="Top" Width="200" Background="#96c8dd">
                 <telerikPrimitives:RadCustomHubTile.FrontContent>
                     <StackPanel Margin="0,0,0,0" VerticalAlignment="Center" HorizontalAlignment="Stretch">
                         <Grid>
@@ -165,7 +166,7 @@
                 </telerikPrimitives:RadCustomHubTile.FrontContent>
             </telerikPrimitives:RadCustomHubTile>
         </Grid>
-        <Grid Grid.Column="1" Grid.Row="1" Margin="20,0,50,0" Width="auto">
+        <Grid Grid.Column="1" Grid.Row="1" x:Name="GridTicketDetails" Margin="20,0,50,0" Width="auto">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
@@ -226,7 +227,7 @@
                 </ScrollViewer>
             </Grid>
         </Grid>
-        <Grid Grid.Column="2" Grid.Row="1" Margin="0,0,50,0" Width="auto">
+        <Grid Grid.Column="2" Grid.Row="1" x:Name="GridAddResponse" Margin="0,0,50,0" Width="auto">
             <Grid.RowDefinitions>
                 <RowDefinition Height="auto" />
                 <RowDefinition Height="auto" />
@@ -330,7 +331,7 @@
                 </ScrollViewer>
             </Grid>
         </Grid>
-        <Grid Grid.Column="3" Grid.Row="1" Margin="50,0,50,0" Width="auto">
+        <Grid Grid.Column="3" Grid.Row="1" x:Name="GridAttachments" Margin="50,0,50,0" Width="auto">
             <ScrollViewer ScrollViewer.VerticalScrollMode="Auto" VerticalAlignment="Top" Height="600" Margin="0,20,0,0" ScrollViewer.VerticalScrollBarVisibility="Auto">
                 <GridView x:Name="AttachmentsList" Margin="0,0,30,0" HorizontalAlignment="Stretch" IsTapEnabled="False" SelectionMode="None">
                     <GridView.ItemsPanel>
@@ -340,11 +341,67 @@
                     </GridView.ItemsPanel>
                     <GridView.ItemTemplate>
                         <DataTemplate>
-                            <Image Source="{Binding ImageUrl}" Width="400" Stretch="UniformToFill" />
+                            <Image Source="{Binding ImageUrl}" Margin="0,0,0,20" x:Name="AttachedImage" Tapped="AttachedView_Tapped" Width="400" Stretch="UniformToFill" />
                         </DataTemplate>
                     </GridView.ItemTemplate>
                 </GridView>
             </ScrollViewer>
+        </Grid>
+
+        <Grid Grid.Column="1" Grid.Row="1" x:Name="GridTicketDetailsTransfer" Visibility="Collapsed" Margin="20,0,50,0" Width="auto">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="auto" />
+                <RowDefinition Height="auto" />
+                <RowDefinition />
+                <RowDefinition />
+            </Grid.RowDefinitions>
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <TextBlock x:Name="TicketNumberTransfer" FontSize="50" Foreground="#8b8b8b" Margin="0,0,30,0" />
+                <Grid Grid.Column="1" MaxWidth="1200">
+                    <ScrollViewer Height="75" VerticalScrollMode="Auto" VerticalScrollBarVisibility="Auto" Margin="0,0,20,0">
+                        <TextBlock x:Name="SubjectLabelTransfer" FontSize="50" TextWrapping="Wrap" Margin="0,0,0,0" Foreground="#8b8b8b" />
+                    </ScrollViewer>
+                </Grid>
+            </Grid>
+            <Grid Grid.Row="1" Margin="0,30,0,0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition Width="auto" />
+                    <ColumnDefinition />
+                </Grid.ColumnDefinitions>
+                <Image Source="Assets/Images/ticket-details-avatar.png" Width="100" Height="100" />
+                <Grid Grid.Column="1" VerticalAlignment="Center" Margin="20,0,20,0">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                        <RowDefinition Height="auto" />
+                    </Grid.RowDefinitions>
+                    <TextBlock x:Name="EndUserLabelTransfer" Foreground="#a6a6a6" FontSize="40" Margin="0,0,0,10" />
+                    <TextBlock Grid.Row="1" Text="SherpaDesk Support | Atlanta" Foreground="#898989" FontSize="20" />
+                    <Grid Grid.Row="2" Margin="0,5,0,0">
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto" />
+                            <ColumnDefinition />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Text="Initial Post" Foreground="#4a4a4a" FontSize="18" Margin="0,0,5,0" />
+                        <TextBlock x:Name="СreatedTimeTransfer" Grid.Column="1" Foreground="#777777" FontSize="18" />
+                    </Grid>
+                </Grid>
+                <Grid x:Name="ChartGridTransfer" Margin="50,0,0,0" Grid.Column="2" HorizontalAlignment="Left" Visibility="Collapsed">
+                    <Chart:RadPieChart x:Name="detailsChartTransfer" Palette="{StaticResource CustomPalette}" VerticalAlignment="Center" HorizontalAlignment="Center" Width="100" Height="100">
+                        <Chart:DoughnutSeries ShowLabels="False">
+                            <Chart:DoughnutSeries.ValueBinding>
+                                <Chart:PropertyNameDataPointBinding PropertyName="Value"/>
+                            </Chart:DoughnutSeries.ValueBinding>
+                        </Chart:DoughnutSeries>
+                    </Chart:RadPieChart>
+                    <TextBlock Text="75%" Foreground="#a6a6a6" FontSize="18" HorizontalAlignment="Center" Margin="0,0,0,0" VerticalAlignment="Center" />
+                </Grid>
+            </Grid>
         </Grid>
     </Grid>
 </common:LayoutAwarePage>
